# NanoPBM

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_all.sh  format_code.sh
.github/workflows/: nanopbm.yml
applications/: CMakeLists.txt  iridium_mechanistic.cpp  test.cpp  test_api.cpp  test_many_yaml.cpp
data_analysis/: plot_hdf5_data.ipynb
example_input_files/: iridium_growth_3step.yaml  iridium_growth_4step.yaml  many_yaml_input.yaml
include/nanopbm/: benchmark_statistics.h  chemical_reaction.h  cvode.h  data_out.h  emom.h  input_parameters.h  ode_contribution.h  particle_agglomeration.h  particle_growth.h  reaction_network.h  reaction_progress.h
tests/: CMakeLists.txt  chemical_reaction.cpp  cvode.cpp  emom.cpp  ode_contribution.cpp  particle_agglomeration.cpp  particle_growth.cpp  reaction_network.cpp  reaction_progress.cpp  this_should_fail.cpp
